[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "enyaml"
authors = [{name = "Sadie Hain"}]
readme = "README.rst"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = ["PyYAML"]

[project.optional-dependencies]
doc = ["Sphinx", "sphinx-rtd-theme"]

[project.urls]
homepage = "https://enyaml.org"
documentation = "https://enyaml.org"
repository = "https://github.com/dhain/enyaml"
